css/style.css
@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;400&display=swap");
nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1em 5vw;
  background-color: #fff;
  z-index: 10;
  position: sticky;
  top: 0;
  transition: 0.3s;
  font-family: "Nunito", sans-serif;
}
nav #navBtn {
  display: none;
}
.scrolled {
  box-shadow: 0px 3px 19px -7px rgb(0 0 0 / 10%);
  padding: 0 5vw;
}
.logo {
  width: 100px;
}
.logo img {
  width: 100%;
}
nav .nav-links {
  display: flex;
  list-style: none;
}
nav .nav-links li {
  margin: 0 1em;
}
nav .nav-links li a {
  text-decoration: none;
  color: #000;
  font-weight: bold;
  letter-spacing: 1px;
}

.nav-links .logout {
  color: #d7bdca;
}

* {
  box-sizing: border-box;
  margin: 0;
}

body {
  font-family: Arial, Helvetica, sans-serif;
}

.cards {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
  gap: 2rem;
  margin: 4rem 5vw;
  padding: 0;
  list-style-type: none;
}

.card {
  position: relative;
  display: flex;
  border-radius: 40px;
  overflow: hidden;
  box-shadow: 0px 3px 19px -7px rgb(0 0 0 / 10%);
}

.card-image {
  width: 100%;
}

.card-overlay {
  position: absolute;
  bottom: 0;
  left: 0;
  border-radius: 40px;
  background-color: #fff;
  transform: translateY(100%);
  transition: 0.2s ease-in-out;
}

.card:hover .card-overlay {
  transform: translateY(0);
}

.card-header {
  gap: 2em;
  padding: 2em;
  border-radius: 40px 0 0 0;
  background-color: #fff;
  transform: translateY(-100%);
  transition: 0.2s ease-in-out;
}

.border {
  width: 80px;
  height: 80px;
  position: absolute;
  bottom: 100%;
  right: 0;
  z-index: 1;
}

.border path {
  fill: #fff;
  d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
}

.card:hover .card-header {
  transform: translateY(0);
}

.card-title {
  font-size: 1em;
  margin: 0 0 0.3em;
  color: #6a515e;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.card-title i {
  font-size: 1.3em;
  cursor: pointer;
  opacity: 0.6;
  transition: 0.3s;
}
.card-title i:hover {
  opacity: 1;
}

.price {
  font-size: 0.8em;
  color: #d7bdca;
}

.card-description {
  padding: 0 2em 2em;
  color: #d7bdca;
  font-family: "MockFlowFont1";
}
footer {
  background-color: #f8f8f9;
  padding: 2em 5em;
  color: #d7bdca;
}
footer .container .footer-header {
  margin-bottom: 2em;
  font-size: 1.4em;
  color: #925373;
  font-family: "Nunito", sans-serif;
  font-weight: bold;
}
footer .container .categories {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
  gap: 1em;
  margin-bottom: 2em;
}
footer .container .categories .cat {
  font-family: "MockFlowFont1";
  font-size: 0.9em;
}

@media (max-width: 850px) {
  .cards {
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  }
  .border {
    bottom: 98%;
  }
  nav .nav-links {
    display: none;
  }
  nav #navBtn {
    display: block;
    cursor: pointer;
  }
  .responsive {
    display: flex !important;
    flex-direction: column;
    list-style: none;
    position: absolute;
    background-color: white;
    z-index: -1;
    width: 100%;
    left: 50%;
    transform: translate(-50%, 0);
    top: 70px;
    align-items: center;
    padding: 0;
  }
  .responsive li {
    margin: 0.5em 0 !important;
  }
}
@media (max-width: 480px) {
  .cards {
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  }
  .border {
    bottom: 98%;
  }
}

